2009-03-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* sampler.cc: #include <cstring>

	* setup.cc (Setup::publishMessageInput,
	Setup::publishMessageOutput): Added.

	* Makefile.am: Link shared library against MPI.

	* music/port.hh, port.cc: Bugfixed error reporting.

	* Makefile.am: Don't accept unresolved symbols in the shared library.

	* music/version.hh, version.cc: New files.

	* Makefile.am: Added ditto.

	* Makefile.am: Set shared library version 1.0.0. (Note that this
	version number follows different rules than the MUSIC version.)

	* port.cc (Port::assertOutput, Port::assertInput, Port::hasWidth,
	Port::width): Supply port name in error messages.

	* connectivity.cc (Connectivity::add): Pass port name to
	ConnectivityInfo constructor.

	* music/connectivity.hh (ConnectivityInfo): Added portName (to be
	used for more comprehensible error messages).

2009-03-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* setup.hh (class Setup): Hide internal API as private.

	* music/connector.hh, music/runtime.hh, music/setup.hh,
	music/spatial.hh, music/subconnector.hh, music/temporal.hh,
	connector.cc, port.cc, runtime.cc, setup.cc, spatial.cc,
	subconnector.cc, synchronizer.cc, temporal.cc: Begin to reorganize
	connectors so that functionality for setup and not needed during
	runtime is moved to the new class Connection.

	* music/connection.hh, connection.cc: New files.

	* Makefile.am: Updated.

	* music/temporal.hh, temporal.cc (ConnectionEdge): Renamed from
	"Connection".

2009-03-03  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Release 1.0

2009-02-27  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* ChangeLog, Makefile.am, music/FIBO.hh, music/array_data.hh,
	music/clock.hh, music/connector.hh, music/data_map.hh,
	music/event.hh, music/interval.hh, music/port.hh,
	music/runtime.hh, music/spatial.hh, music/subconnector.hh,
	music/synchronizer.hh, music/temporal.hh, FIBO.cc, array_data.cc,
	clock.cc, connector.cc, port.cc, runtime.cc, spatial.cc,